--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>呼吸交互训练</title>
-  <style> body { padding: 0; margin: 0; } </style>
+  <style> body { padding: 0; margin: 0; overflow: hidden; } </style>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
-<script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.8/addons/p5.sound.js"></script>
-<script src="https://unpkg.com/@gohai/p5.webserial@^1/libraries/p5.webserial.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.min.js"></script>
+  <script src="https://unpkg.com/@gohai/p5.webserial@^1/libraries/p5.webserial.js"></script>
 
-<script src="ui_helpers.js"></script> <script src="task1.js"></script>      <script src="task2.js"></script>   <script src="task3.js"></script> <script src="task4.js"></script>  <script src="task5.js"></script>  <script src="sketch.js"></script>     </head>
+  <script src="ui_helpers.js"></script> 
+  <script src="task1.js"></script>      
+  <script src="task2.js"></script>   
+  <script src="task3.js"></script> 
+  <script src="task4.js"></script>  
+  <script src="task5.js"></script>  
+  <script src="sketch.js"></script>     
 </head>
 <body>
 </body>
